@@ -1,8 +1,10 @@
 DIST gst-plugins-base-0.10.20.tar.bz2 1986182 RMD160 2283fa2743a18630c3dab5a77d2b4eae9253eb97 SHA1 e887f071eda3128249657805dc5a42b2ad2d3bef SHA256 aa3d5ce29232ee5b24b6c032194ac1fc757309ea50ac850c0db46e45ab0a78ff
 DIST gst-plugins-base-0.10.21.tar.bz2 1982446 RMD160 4fa9056c8cc5d21db30074596831ffc14f6b671b SHA1 ae83b3306f52aa3affd014dade30c6cd5c2baa66 SHA256 673f4a45a0f3aa99606a58097bde02d09ad51d7b2e702f0d68eeb6db21d47e93
 DIST gst-plugins-base-0.10.22.tar.bz2 2118085 RMD160 013de77422d6e89b64cf55ff7299b0ff1e38ef8a SHA1 8e6a894858f5412234ce1591bbb773102c150cb7 SHA256 184c5aed03ebfe38a276fc03cb7d8685d9a6da5a48bf6a0565c83e11a29cd5f9
+DIST gst-plugins-base-0.10.23.tar.bz2 2126280 RMD160 3b08bdeeb5237fb0e6e918ac5d6a97064fa8fe98 SHA1 f0b66ddca22187c8011b37a5d806c7dc7e68b7f1 SHA256 1c11d98eb9a1b1bc54becf465e74c2aa4019bb57a31dd70686269af6a9b9e93b
 EBUILD gst-plugins-alsa-0.10.20.ebuild 425 RMD160 8de63ef75e6e99026480f6446d724487d16fcf30 SHA1 38ee2bafbecbedd5ed6cdfa23bfed44b40a202dc SHA256 913d531c48fb573407d0d5e1c0cadb6ddea512984de75410f43c0deb858fa23f
 EBUILD gst-plugins-alsa-0.10.21.ebuild 427 RMD160 0ab01744e2b7e82f4673d26b2304bf9e32c74c56 SHA1 f1499f0b5cbbc9e7f1ed605639420a47f6b49824 SHA256 6e97c2af07bfcf09978d708c217a889022fc206431a5fc68b4df61996aab6637
 EBUILD gst-plugins-alsa-0.10.22.ebuild 434 RMD160 2468c9d0e1e303338efeebfe3688a889aac609c1 SHA1 6686b01ad4d20b5d3c0af139498b96a16f42743c SHA256 9e5fdd8f99377ee0d8ce3db976c4b0691d1c02288050d00280d9645a07c59913
-MISC ChangeLog 15484 RMD160 14143ea6bbb10e4a6abe88a55bd3f81f8c4c61c6 SHA1 2c12e2d1be08ad08844b9159ceafb05ae669cea2 SHA256 ce81147d1f55102458fff54d0bc6bb52c2b7c60b34696fbf8aad9640e6766668
+EBUILD gst-plugins-alsa-0.10.23.ebuild 432 RMD160 1e52586c243651a70de589520c12b33b1e85c9cb SHA1 5e7baa39cbd94743611715da1961df25fdfcc4bf SHA256 41ff61be3b29ad2099df2a7ea4097481298474710dafbb497bb09da23f520aae
+MISC ChangeLog 15625 RMD160 6821612c6d6a64fb57de6e26b8920a1dc8e18705 SHA1 ed91b780e82e678e8e0791a449ce2a9e82693921 SHA256 d31f7df1e8749f0e808db694868decf4b26cda9012f5b777b5e4b6c3ac01c867
 MISC metadata.xml 181 RMD160 51814fbdcf7f32cfe70018b3af7fc798e41ff90d SHA1 faf40c45bd66b0072b95556cf7ab097d3be19511 SHA256 22c215902ccdc7fd8cdb765750fb23ea9d9b6c9d3edb1b45325c3469f8f6ffc5
