@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gst-plugins-alsa
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-alsa/ChangeLog,v 1.121 2009/05/03 17:33:54 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-alsa/ChangeLog,v 1.122 2009/05/11 03:16:20 tester Exp $
+
+*gst-plugins-alsa-0.10.23 (11 May 2009)
+
+  11 May 2009; Olivier Crête <tester@gentoo.org>
+  +gst-plugins-alsa-0.10.23.ebuild:
+  Version bump
 
   03 May 2009; Tobias Klausmann <klausman@gentoo.org>
   gst-plugins-alsa-0.10.22.ebuild:
